Got client server communication

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
       <section class='slides slide--original'>Third Slide</section>
     </div>
     <script src="dist.js"></script>
+    <div>This is always showing!</div>
   </body>
 </html>
