Got a POC working. Super buggy

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
   </head>
   <body>
     <div>
-      <section class='slides slide--original'>First Slide</section>
-      <section class='slides slide--original'>Second Slide</section>
-      <section class='slides slide--original'>Third Slide</section>
+      <section class='slide slide--original'>First Slide</section>
+      <section class='slide slide--original'>Second Slide</section>
+      <section class='slide slide--original'>Third Slide</section>
     </div>
+    <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="dist.js"></script>
     <div>This is always showing!</div>
   </body>
